syntax = "proto3";

package auth.auth_user.service;

message AuthUserPb {
    string user_id = 1;
    repeated string granted_roles = 2;
}
